<resources>
    <string name="app_name">ComponentApplication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="current_internet_invalid">当前网络未连接</string>
    <string name="internet_base_url_null">baseUrl不能为空</string>

    <!--loading-->
    <string name="loading">载入中···</string>

    <!--EasyRecyclerView库的公用布局-->
    <string name="more_loading">加载中…</string>
    <string name="no_more">没有更多了</string>
    <string name="load_error_resume">加载出错，点击重试</string>
    <string name="more">更多</string>
    <string name="no_data">暂无数据</string>

    <string name="home_info">资讯</string>
    <string name="home_data">数据</string>
    <string name="home_main_page">首页</string>
    <string name="home_tool">工具</string>
    <string name="home_mine">我的</string>
</resources>
